--- a/.gitignore
+++ b/.gitignore
@@ -40,8 +40,7 @@ htmlcov/
 .tox/
 .coverage
 .coverage.*
-.cache
-nosetests.xml
+.cache nosetests.xml
 coverage.xml
 *.cover
 .hypothesis/
@@ -99,3 +98,5 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+.idea
